[Feature][KSP][MergeBindings] 支持 binding 嵌套
Signed-off-by: eipip1e0 <eipip1e0@163.com>

--- a/ei-mergeviewbinding/android/src/main/res/layout/first_type_layout.xml
+++ b/ei-mergeviewbinding/android/src/main/res/layout/first_type_layout.xml
@@ -31,4 +31,8 @@
     <include
         android:id="@+id/include1"
         layout="@layout/first_include"/>
+
+<!--    <include-->
+<!--        android:id="@+id/include2"-->
+<!--        layout="@layout/first_include2"/>-->
 </LinearLayout>
